WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
ASSIGNED
207056
[macOS] AirPlay sometimes stops after 60 minutes of playback
https://bugs.webkit.org/show_bug.cgi?id=207056
Summary
[macOS] AirPlay sometimes stops after 60 minutes of playback
Eric Carlson
Reported
2020-01-31 10:25:25 PST
AirPlay sometimes stops after 60 minutes of playback <
rdar://problem/53649508
>
Attachments
Patch
(27.81 KB, patch)
2020-01-31 11:08 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Updated patch.
(4.51 MB, patch)
2020-01-31 13:46 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch
(27.80 KB, patch)
2020-02-03 08:48 PST
,
Eric Carlson
jer.noble
: review+
Details
Formatted Diff
Diff
Patch for landing.
(28.12 KB, patch)
2020-02-03 09:51 PST
,
Eric Carlson
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing.
(28.12 KB, patch)
2020-02-03 11:34 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2020-01-31 11:08:20 PST
Created
attachment 389381
[details]
Patch
Jon Lee
Comment 2
2020-01-31 11:39:59 PST
Comment on
attachment 389381
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=389381&action=review
> Source/WebCore/ChangeLog:15 > + AirPlay can't actually be active is an item doesn't have audio or video, so always claim
if* an item
> Source/WebCore/ChangeLog:16 > + to have both during AirPlay.
any side effects if the video has no audio tracks?
Eric Carlson
Comment 3
2020-01-31 13:45:59 PST
Comment on
attachment 389381
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=389381&action=review
>> Source/WebCore/ChangeLog:15 >> + AirPlay can't actually be active is an item doesn't have audio or video, so always claim > > if* an item
Oops!
>> Source/WebCore/ChangeLog:16 >> + to have both during AirPlay. > > any side effects if the video has no audio tracks?
No.
Eric Carlson
Comment 4
2020-01-31 13:46:35 PST
Created
attachment 389407
[details]
Updated patch.
Eric Carlson
Comment 5
2020-02-03 08:48:47 PST
Created
attachment 389519
[details]
Patch
Eric Carlson
Comment 6
2020-02-03 09:51:39 PST
Created
attachment 389531
[details]
Patch for landing.
WebKit Commit Bot
Comment 7
2020-02-03 10:26:46 PST
Comment on
attachment 389531
[details]
Patch for landing. Rejecting
attachment 389531
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 389531, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!. Full output:
https://webkit-queues.webkit.org/results/13316107
Eric Carlson
Comment 8
2020-02-03 11:34:58 PST
Created
attachment 389542
[details]
Patch for landing.
WebKit Commit Bot
Comment 9
2020-02-03 12:19:50 PST
Comment on
attachment 389542
[details]
Patch for landing. Clearing flags on attachment: 389542 Committed
r255581
: <
https://trac.webkit.org/changeset/255581
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug