Source/WebCore/Modules/mediasession/WebMediaSessionManagerClient.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2015 Apple Inc. All rights reserved.
+ * Copyright (C) 2015-2020 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -41,6 +41,7 @@ public:
     virtual void externalOutputDeviceAvailableDidChange(uint64_t, bool) = 0;
     virtual void setShouldPlayToPlaybackTarget(uint64_t, bool) = 0;
     virtual void playbackTargetPickerWasDismissed(uint64_t) = 0;
+    virtual bool alwaysOnLoggingAllowed() { return false; }
 };
 
 } // namespace WebCore
